# zinkwell

./: .gitignore  CLAUDE.md  FINDINGS.md  MANIFEST.in  WSL_OPTIONS.md  bt_reconnect.ps1  bt_scan.py  bt_service_info.ps1  client_serial.py  client_windows.py  explore_protocol.py  find_kodak_port.py  kodak_prinics_protocol.py  kodak_step.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_com_ports.py  test_kodak_serial.py  test_kodak_step.py
.claude/: settings.local.json
docs/: KODAK_STEP_PROTOCOL.md  PLAN-bluetooth-abstraction.md  PROTOCOL.md
esp32-cam/: README.md  WIRING.md  library.properties  platformio.ini
esp32-cam/docs/: KODAK_STEP_PROTOCOL.md
esp32-cam/examples/: KodakStepPrint.ino  KodakStepTest.ino
esp32-cam/include/: ESP32CameraHelper.h  KodakStepPrinter.h  KodakStepProtocol.h
esp32-cam/lib/KodakStepPrinter/: README.md  library.json
esp32-cam/lib/KodakStepPrinter/src/: KodakStep.h  KodakStepPrinter.cpp  KodakStepPrinter.h  KodakStepProtocol.cpp  KodakStepProtocol.h
esp32-cam/src/: ESP32CameraHelper.cpp  KodakStepPrinter.cpp  KodakStepProtocol.cpp  main.cpp
esp32-cam/test/test_embedded/: test_protocol.cpp
tests/: __init__.py  conftest.py  mocks.py
tests/contract/: __init__.py  test_transport.py
tests/hardware/: __init__.py  test_real_printer.py
tests/integration/: test_canon_ivy2.py  test_kodak_step.py
tests/unit/: test_exceptions.py  test_factory.py
tests/unit/bluetooth/: __init__.py  test_native.py  test_transport_factory.py
tests/unit/devices/: __init__.py  test_base.py
tests/unit/utils/: test_threading.py
zinkwell/: __init__.py  exceptions.py  factory.py
zinkwell/bluetooth/: __init__.py  base.py  native.py
zinkwell/devices/: __init__.py  base.py
zinkwell/devices/canon_ivy2/: __init__.py  image.py  printer.py  protocol.py
zinkwell/devices/kodak_step/: __init__.py  image.py  printer.py  protocol.py
zinkwell/models/: __init__.py  capabilities.py  status.py
zinkwell/utils/: __init__.py  threading.py
(+7 files in other folders)
